--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,8 @@ plugins {
 	id 'java'
 }
 
+apply plugin: 'io.spring.dependency-management'
+
 group = 'com.hanghae'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
@@ -53,6 +55,10 @@ dependencies {
 	// slf4j for test
 	testCompileOnly 'org.projectlombok:lombok'
 	testAnnotationProcessor 'org.projectlombok:lombok'
+
+	// webSocket
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 
 }
 
