--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,12 @@ build/
 .project
 .settings
 .springBeans
+
+caches/**
+wrapper/**
+daemon/**
+native/**
+.tmp/**
 .sts4-cache
 bin/
 !**/src/main/**/bin/
@@ -39,3 +45,4 @@ out/
 .vscode/
 
 src/main/resources/*
+src/test/**
