--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,6 @@ repositories {
 }
 
 dependencies {
-
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -33,7 +32,6 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 
-
 	//JWT
 	implementation 'com.auth0:java-jwt:3.19.2'
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
@@ -42,10 +40,11 @@ dependencies {
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'
 	compileOnly 'com.auth0:java-jwt:3.19.2'
 
-	//webSocket
+	// for websocket, stomp
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
-	implementation 'org.webjars:stomp-websocket:2.3.4'
-	implementation 'org.webjars:sockjs-client:1.5.1'
+	implementation group: 'org.webjars', name: 'stomp-websocket', version: '2.3.3-1'
 
 	// validation
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
@@ -58,18 +57,6 @@ dependencies {
 	testCompileOnly 'org.projectlombok:lombok'
 	testAnnotationProcessor 'org.projectlombok:lombok'
 
-	// webSocket
-	implementation 'org.springframework.boot:spring-boot-starter-websocket'
-
-	implementation 'org.springframework.boot:spring-boot-starter-freemarker'
-	implementation 'org.springframework.boot:spring-boot-devtools'
-	implementation 'org.webjars.bower:bootstrap:4.3.1'
-	implementation 'org.webjars.bower:vue:2.5.16'
-	implementation 'org.webjars.bower:axios:0.17.1'
-	implementation 'org.webjars:sockjs-client:1.1.2'
-	implementation 'org.webjars:stomp-websocket:2.3.3-1'
-	implementation 'com.google.code.gson:gson:2.8.0'
-
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
@@ -81,7 +68,8 @@ dependencies {
 
 
 	//embedded-redis
-	implementation ('it.ozimov:embedded-redis:0.7.3') { exclude group: "org.slf4j", module: "slf4j-simple" }
+	implementation ('it.ozimov:embedded-redis:0.7.3')
+			{ exclude group: "org.slf4j", module: "slf4j-simple" }
 
 }
 jar{
