--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,10 @@ repositories {
 	mavenCentral()
 }
 
+ext {
+	set('springBootAdminVersion', "2.7.4")
+}
+
 dependencies {
 	// Springboot Web,DataJpa,Security,Lombok,Mysql
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -59,8 +63,19 @@ dependencies {
 	implementation 'io.awspring.cloud:spring-cloud-starter-aws:2.3.1'
 
 
+	//actuator
+	implementation 'de.codecentric:spring-boot-admin-starter-client'
 
 }
+
+
+dependencyManagement {
+	imports {
+		mavenBom "de.codecentric:spring-boot-admin-dependencies:${springBootAdminVersion}"
+	}
+}
+
+
 jar{
 	enabled=false
 }
