Fix : change swagger gradle file & settings

--- a/build.gradle
+++ b/build.gradle
@@ -63,10 +63,7 @@ dependencies {
 	implementation 'io.awspring.cloud:spring-cloud-starter-aws:2.3.1'
 
 	// swagger
-	// https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui
-	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
-	implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
-
+	implementation 'io.springfox:springfox-boot-starter:3.0.0'
 	
 }
 
